crates/tui/src/chat_screen/snapshots/savfox_tui__chatwidget__tests__exploring_step6_finish_cat_bar.snap
---
source: tui/src/chat_screen/tests.rs
expression: blob6
---
• Explored
  └ List ls -la
    Read foo.txt, bar.txt
