crates/tui/src/chat_screen/snapshots/savfox_tui__chatwidget__tests__feedback_upload_consent_popup.snap
---
source: tui/src/chat_screen/tests.rs
expression: popup
---
  Upload logs?

  The following files will be sent:
    • savfox-logs.log

› 1. Yes  Share the current Savfox session logs with the team for
          troubleshooting.
  2. No

  Press enter to confirm or esc to go back
