crates/tui/src/chat_screen/snapshots/savfox_tui__chatwidget__tests__interrupt_exec_marks_failed.snap
---
source: tui/src/chat_screen/tests.rs
expression: exec_blob
---
• Ran sleep 1
  └ (no output)
