crates/tui/src/chat_screen/snapshots/savfox_tui__chatwidget__tests__mcp_startup_header_booting.snap
---
source: tui/src/chat_screen/tests.rs
expression: terminal.backend()
---
"                                                                                "
"• Booting MCP server: alpha (0s • esc to interrupt)                             "
"                                                                                "
"                                                                                "
"› Ask Savfox to do anything                                                      "
"                                                                                "
"  ? for shortcuts                                            100% context left  "
